# feedreader

./: .gitignore  CMakeLists.txt  Makefile  README
src/: download.c  download.h  feedlist.c  feedlist.h  fileparser.c  fileparser.h  gui.c  gui.h  icon.h  main.c  parse.c  parse.h  util.c  util.h
